--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,3 +34,10 @@ a {
     color-scheme: dark;
   }
 }
+
+.adsbygoogle.banner {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  width: 100%;
+}
