--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  font-family: 'Poppins';
+  font-family: 'Noto Sans';
   font-weight: 400;
+
+  /* Colors V2 */
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-shm-black: #131314;
+  --color-grey-50: #1e1f20;
+  --color-grey-100: #212121;
+  --color-grey-200: #2d2d2d;
+  --color-grey-300: #404040;
+  --color-grey-400: #757575;
+  --color-grey-500: #9e9e9e;
+  --color-grey-600: #bdbdbd;
+  --color-grey-700: #e0e0e0;
+  --color-grey-800: #eeeeee;
+  --color-grey-900: #fafafa;
+  --accent-blue-50: #004a77;
+  --accent-blue-100: #7fcfff;
+  --accent-red-50: #ff6090;
+  --accent-red-100: #e91e63;
+  --accent-yellow-50: #ffd740;
+  --accent-yellow-100: #ffc107;
+  --accent-green-50: #66bb6a;
+  --accent-green-100: #4caf50;
 
   /* Colors */
   --color-black: #000000;
@@ -49,18 +73,44 @@
   --line-height-xxl: 135%;
   --line-height-max: 150%;
 
+  --spacing-small_50: 2px;
+  --spacing-small_100: 4px;
+  --spacing-small_150: 6px;
+  --spacing-small_200: 8px;
+  --spacing-small_300: 12px;
+  --spacing-medium_100: 16px;
+  --spacing-medium_150: 20px;
+  --spacing-medium_200: 24px;
+  --spacing-medium_300: 32px;
+  --spacing-medium_350: 36px;
+  --spacing-large_50: 40px;
+  --spacing-large_100: 48px;
+  --spacing-large_150: 56px;
+  --spacing-large_200: 64px;
+  --spacing-large_300: 80px;
+  --spacing-large_400: 96px;
+  --spacing-large_500: 128px;
+  --spacing-large_600: 256px;
+
   /* Spacing / Padding */
-  --space-half: 4px;
-  --space-base: 8px;
-  --space-sm: 12px;
-  --space-md: 16px;
-  --space-md-lg: 20px;
-  --space-lg: 24px;
-  --space-xl: 32px;
-  --space-xxl: 40px;
-  --space-xxxl: 48px;
-  --space-xxxxl: 56px;
-  --space-max: 64px;
+  --spacing-small_50: 2px;
+  --spacing-small_100: 4px;
+  --spacing-small_150: 6px;
+  --spacing-small_200: 8px;
+  --spacing-small_300: 12px;
+  --spacing-medium_100: 16px;
+  --spacing-medium_150: 20px;
+  --spacing-medium_200: 24px;
+  --spacing-medium_300: 32px;
+  --spacing-medium_350: 36px;
+  --spacing-large_50: 40px;
+  --spacing-large_100: 48px;
+  --spacing-large_150: 56px;
+  --spacing-large_200: 64px;
+  --spacing-large_300: 80px;
+  --spacing-large_400: 96px;
+  --spacing-large_500: 128px;
+  --spacing-large_600: 256px;
 
   /* Transitions */
   --transition-default: all 300ms ease;
