--- a/src/app/shuffle/shuffle.module.css
+++ b/src/app/shuffle/shuffle.module.css
@@ -2,7 +2,7 @@
   align-items: flex-start;
   display: flex;
   flex-direction: column;
-  padding-block: var(--space-lg);
+  padding-block: var(--spacing-medium_200);
 }
 
 .entryThumbnail {
@@ -17,10 +17,10 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: var(--space-md-lg);
+  gap: var(--spacing-medium_150);
   justify-content: center;
   max-width: 700px;
-  padding: var(--space-xl);
+  padding: var(--spacing-medium_300);
   text-align: center;
 }
 
@@ -29,7 +29,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: var(--space-xl);
+  padding: var(--spacing-medium_300);
   min-height: 100vh;
 }
 
@@ -37,8 +37,8 @@
   align-items: center;
   display: grid;
   grid-template-columns: 1fr max-content max-content;
-  grid-column-gap: var(--space-base);
-  margin-block-start: var(--space-lg);
+  grid-column-gap: var(--spacing-small_200);
+  margin-block-start: var(--spacing-medium_200);
   max-width: 700px;
   width: 100%;
 }
@@ -51,8 +51,8 @@
   cursor: pointer;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-column-gap: var(--space-lg);
-  margin-block-start: var(--space-lg);
+  grid-column-gap: var(--spacing-medium_200);
+  margin-block-start: var(--spacing-medium_200);
   max-width: 700px;
   overflow: hidden;
   text-align: left;
