--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -5,8 +5,8 @@
   flex-direction: row;
   justify-content: space-between;
   max-width: 1800px;
-  margin: 0 auto var(--space-xxxl) auto;
-  padding: var(--space-md-lg);
+  margin: 0 auto var(--spacing-large_100) auto;
+  padding: var(--spacing-medium_150);
   width: 100%;
 }
 
@@ -21,13 +21,13 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: var(--space-sm);
+  gap: var(--spacing-small_300);
 }
 
 .navLinks {
   display: flex;
   flex-direction: row;
-  gap: var(--space-sm);
+  gap: var(--spacing-small_300);
   justify-content: space-between;
   list-style: none;
   width: max-content;
