--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -3,12 +3,12 @@
   border: 1px solid var(--color-gray-1);
   border-radius: 4px;
   color: var(--color-white);
-  font-family: "Poppins", sans-serif;
+  font-family: "Noto Sans", sans-serif;
   font-size: var(--font-base);
-  margin: var(--space-md) 0;
+  margin: var(--spacing-medium_100) 0;
   max-width: 1200px;
   outline: none;
-  padding: var(--space-md);
+  padding: var(--spacing-medium_100);
   transition: var(--transition-default);
   width: 100%;
 }
