--- a/src/components/Typography/Typography.module.css
+++ b/src/components/Typography/Typography.module.css
@@ -1,6 +1,6 @@
 .typography {
   color: var(--color-white);
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   margin: 0;
   padding: 0;
   text-decoration: none;
