--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,11 +73,13 @@
   --line-height-xxl: 135%;
   --line-height-max: 150%;
 
+  /* Spacing */
   --spacing-small_50: 2px;
   --spacing-small_100: 4px;
   --spacing-small_150: 6px;
   --spacing-small_200: 8px;
   --spacing-small_300: 12px;
+  --spacing-small_400: 14px;
   --spacing-medium_100: 16px;
   --spacing-medium_150: 20px;
   --spacing-medium_200: 24px;
@@ -92,25 +94,14 @@
   --spacing-large_500: 128px;
   --spacing-large_600: 256px;
 
-  /* Spacing / Padding */
-  --spacing-small_50: 2px;
-  --spacing-small_100: 4px;
-  --spacing-small_150: 6px;
-  --spacing-small_200: 8px;
-  --spacing-small_300: 12px;
-  --spacing-medium_100: 16px;
-  --spacing-medium_150: 20px;
-  --spacing-medium_200: 24px;
-  --spacing-medium_300: 32px;
-  --spacing-medium_350: 36px;
-  --spacing-large_50: 40px;
-  --spacing-large_100: 48px;
-  --spacing-large_150: 56px;
-  --spacing-large_200: 64px;
-  --spacing-large_300: 80px;
-  --spacing-large_400: 96px;
-  --spacing-large_500: 128px;
-  --spacing-large_600: 256px;
+  /* Border Radius */
+  --border-radius-50: 4px;
+  --border-radius-100: 8px;
+  --border-radius-200: 12px;
+  --border-radius-300: 16px;
+  --border-radius-400: 20px;
+  --border-radius-500: 24px;
+  --border-radius-600: 28px;
 
   /* Transitions */
   --transition-default: all 300ms ease;
