--- a/src/components/Navigation/Footer.module.css
+++ b/src/components/Navigation/Footer.module.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  max-width: 1800px;
   margin: 0 auto;
   padding: var(--spacing-medium_150);
   width: 100%;
@@ -14,16 +13,31 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0 auto;
+  max-width: 800px;
   width: 100%;
+
+  @media (max-width: 575px) {
+    align-items: center;
+    flex-direction: column;
+    gap: var(--spacing-medium_150);
+  }
 }
 
 .footerBottom {
-  padding-block: var(--spacing-medium_150);
+  padding-block-start: var(--spacing-medium_300);
+  padding-block-end: var(--spacing-medium_150);
+}
+
+.footerNav {
+  display: flex;
+  flex-direction: row;
+  gap: var(--spacing-large_100);
 }
 
 .navLinks {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: var(--spacing-small_300);
   justify-content: space-between;
   list-style: none;
@@ -34,6 +48,7 @@
   border-bottom: 1px solid var(--color-white);
   display: block;
   transition: all 2500ms ease-in-out;
+  width: max-content;
 }
 
 .navLinks a:hover {
