--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -25,24 +25,26 @@
 }
 
 .navLinks {
+  background: transparent;
   display: flex;
   flex-direction: row;
-  gap: var(--spacing-small_300);
+  gap: var(--spacing-medium_100);
   justify-content: space-between;
   list-style: none;
   width: max-content;
 }
 
 .navLinks a {
-  border-bottom: 1px solid var(--color-white);
+  border-radius: var(--border-radius-200);
   display: block;
-  transition: all 2500ms ease-in-out;
+  padding: var(--spacing-small_150) var(--spacing-small_400);
+  transition: all 250ms ease-in-out;
+}
+
+.navLinks li.active a {
+  background: var(--color-grey-300);
 }
 
 .navLinks a:hover {
-  border-bottom: 1px solid var(--color-gray-6);
-}
-
-.navLinks a:hover * {
-  color: var(--color-gray-6) !important;
+  background: var(--color-grey-300);
 }
